# engineering_practices

./: .gitignore  README.md  Snakefile  analysis.ipynb  before_refactoring.md  linting.md  pyproject.toml  requirements.txt  test_results.txt  tmp.py
.snakemake/metadata/: ZGF0YS9iZXN0X3BhcmFtcy5qc29u  ZGF0YS9wcm9jZXNzZWQvZGF0YS5jc3Y=  ZGF0YS9wcm9jZXNzZWQvdmFsLmNzdg==  ZGF0YS9zcGxpdHRlZC90ZXN0LmNzdg==  ZGF0YS9zcGxpdHRlZC90cmFpbi5jc3Y=  ZGF0YS9zcGxpdHRlZC92YWwuY3N2  bW9kZWxzL21vZGVsLnBrbA==  dGVzdF9yZXN1bHRzLnR4dA==
data/: best_params.json  imdb.csv
data/processed/: data.csv
data/splitted/: test.csv  train.csv  val.csv
hw1/: README.md  pyproject.toml
hw1/hw1/: main.py  utils.py
models/: model.pkl
notebooks/: descriptive_by_age.ipynb  descriptive_by_class.ipynb  general_descriptive.ipynb
project/: __init__.py  grid_search.py  main.py  prepare_data.py  split_data.py  test.py  train.py
project/tasks/: get_data.py  grid_search.py  prepare_data.py  split_data.py  test.py  train.py
