[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["Maksim Koltiugin <mkoltugin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
